<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/my_button_bg1"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <SeekBar
        android:id="@+id/seekBarStartDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="15" />

    <TextView
        android:id="@+id/txtStartDialog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/downloading_components"
        android:textColor="@color/colorBlackk"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtStartDialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/connecting_to_the_server"
        android:textColor="@color/colorBlackk"
        android:textSize="20sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txtStartDialog3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/server_timeout"
        android:textColor="@color/colorBlackk"
        android:textSize="20sp"
        android:visibility="gone"/>


    <Button
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorGray"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:text="@string/retry"
        android:textColor="@color/colorPink"
        android:textSize="20sp" />

</LinearLayout>